--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
        🔧 YAPILANDIRMA (DÜZENLEYİN)
        ========================= */
     const FIREBASE_CONFIG = {
-      apiKey: "YOUR_FIREBASE_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+    apiKey: "AIzaSyBMpRjGJC_lKEIyEvCCvxplCyj8PkU-VXY",
+    authDomain: "shortssayt-b3a02.firebaseapp.com",
+    projectId: "shortssayt-b3a02",
+    storageBucket: "shortssayt-b3a02.firebasestorage.app",
+    messagingSenderId: "991052730765",
+    appId: "1:991052730765:web:0e3ad7513c2452ea99adc4"
     };
     const YT_API_KEY = "AIzaSyCtw_vK-v4WFXqhoKLmimhFNHoQgJ6r48g"; // İstemcide kullanılabilir.
 
